# fastapi-api-rest

./: .env.example  .gitignore  Dockerfile  GUIDE.MD  README.md  alembic.ini  app.db  pyproject.toml
alembic/: env.py
alembic/versions/: f1ba1591ca72_create_user_table.py
src/: main.py
src/core/: config.py  decorators.py  middleware.py
src/database/: __init__.py  session.py
src/database/models/: user.py
src/dependencies/: repositories_di.py  services_di.py
src/handlers/: __init__.py  exception_handler.py  exception_handlers.py
src/repositories/: user_repository.py
src/repositories/impl/: user_repository_sql_alchemy.py
src/routers/: __init__.py  auth_router.py  test_router.py  user_router.py
src/schemas/: error.py  pagination.py  user.py
src/services/: cookie_service.py  user_service.py
src/utils/: fast_api_args.py
tests/: conftest.py
tests/routers/: test_auth_router.py  test_user_router.py  users_constants.py
tests/services/: test_cookie_service.py  test_user_service.py
